firebase setup and created basic structure and usefull components and services

--- a/angular.json
+++ b/angular.json
@@ -117,8 +117,16 @@
               "devServerTarget": "github-search-firebase-login:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
-  "defaultProject": "github-search-firebase-login"
+    }
+  },
+  "defaultProject": "github-search-firebase-login",
+  "cli": {
+    "analytics": false
+  }
 }
